--- a/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
+++ b/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
@@ -10,6 +10,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <local1:OverallConverter x:Key="OverallConverter" />
+        <local1:DoubleFormatConverter x:Key="DoubleFormatConverter1d" />        
         <local1:InjuryStatusConverter x:Key="InjuryStatusConverter" />
         <local1:IsPlayertoWatchConverter x:Key="IsPlayertoWatchConverter" />
         <local1:iPosConverter x:Key="iPosConverter" />
@@ -463,7 +464,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="Completes" Width="80" DisplayMemberBinding="{Binding Path=Completes}" />
                                         <GridViewColumn Header="Attempts" Width="80" DisplayMemberBinding="{Binding Path=Ateempts}" />
-                                        <GridViewColumn Header="Comp %" Width="80" DisplayMemberBinding="{Binding Path=Comp_Percent}" />
+                                        <GridViewColumn Header="Comp %" Width="80" DisplayMemberBinding="{Binding Path=Comp_Percent,Converter={StaticResource  DoubleFormatConverter1d}}" />
                                         <GridViewColumn Header="Yards" Width="80" DisplayMemberBinding="{Binding Path=Yards}" />
                                         <GridViewColumn Header="TDs" Width="80" DisplayMemberBinding="{Binding Path=TDs}" />
                                         <GridViewColumn Header="INTs" Width="80" DisplayMemberBinding="{Binding Path=Ints}" />
@@ -505,7 +506,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="Rushes" Width="80" DisplayMemberBinding="{Binding Path=Rushes}" />
                                         <GridViewColumn Header="Yards" Width="80" DisplayMemberBinding="{Binding Path=Yards}" />
-                                        <GridViewColumn Header="Yards/Carry" Width="80" DisplayMemberBinding="{Binding Path=Yards_Per_Carry}" />
+                                        <GridViewColumn Header="Yards/Carry" Width="80" DisplayMemberBinding="{Binding Path=Yards_Per_Carry,Converter={StaticResource  DoubleFormatConverter1d}}" />
                                         <GridViewColumn Header="Yards" Width="80" DisplayMemberBinding="{Binding Path=Yards}" />
                                         <GridViewColumn Header="TDs" Width="80" DisplayMemberBinding="{Binding Path=TDs}" />
                                         <GridViewColumn Header="INTs" Width="80" DisplayMemberBinding="{Binding Path=Ints}" />
@@ -547,7 +548,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="Catches" Width="80" DisplayMemberBinding="{Binding Path=Catches}" />
                                         <GridViewColumn Header="Yards" Width="80" DisplayMemberBinding="{Binding Path=Yards}" />
-                                        <GridViewColumn Header="Yards/Catch" Width="80" DisplayMemberBinding="{Binding Path=Yards_Per_Catch}" />
+                                        <GridViewColumn Header="Yards/Catch" Width="80" DisplayMemberBinding="{Binding Path=Yards_Per_Catch,Converter={StaticResource  DoubleFormatConverter1d}}" />
                                         <GridViewColumn Header="Drops" Width="80" DisplayMemberBinding="{Binding Path=Drops}" />
                                         <GridViewColumn Header="TDs" Width="80" DisplayMemberBinding="{Binding Path=TDs}" />
                                         <GridViewColumn Header="Fumbles Lost" Width="90" DisplayMemberBinding="{Binding Path=Fumbles_Lost}" />
@@ -707,7 +708,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="FG Att" Width="100" DisplayMemberBinding="{Binding Path=FG_ATT}" />
                                         <GridViewColumn Header="FG Made" Width="100" DisplayMemberBinding="{Binding Path=FG_Made}" />
-                                        <GridViewColumn Header="FG %" Width="100" DisplayMemberBinding="{Binding Path=FG_Percent}" />
+                                        <GridViewColumn Header="FG %" Width="100" DisplayMemberBinding="{Binding Path=FG_Percent,Converter={StaticResource  DoubleFormatConverter1d}}" />
                                         <GridViewColumn Header="FG Long" Width="100" DisplayMemberBinding="{Binding Path=FG_Long}" />
                                         <GridViewColumn Header="XP Att" Width="100" DisplayMemberBinding="{Binding Path=XP_ATT}" />
                                         <GridViewColumn Header="XP Made" Width="100" DisplayMemberBinding="{Binding Path=XP_Made}" />
@@ -748,7 +749,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="Returns" Width="80" DisplayMemberBinding="{Binding Path=Returns}" />
                                         <GridViewColumn Header="Yards" Width="80" DisplayMemberBinding="{Binding Path=Yards}" />
-                                        <GridViewColumn Header="Yards/Return" Width="80" DisplayMemberBinding="{Binding Path=Yards_avg}" />
+                                        <GridViewColumn Header="Yards/Return" Width="80" DisplayMemberBinding="{Binding Path=Yards_avg,Converter={StaticResource  DoubleFormatConverter1d}}" />
                                         <GridViewColumn Header="Yards Long" Width="100" DisplayMemberBinding="{Binding Path=Yards_Long}" />
                                         <GridViewColumn Header="TDs" Width="80" DisplayMemberBinding="{Binding Path=TDs}" />
                                         <GridViewColumn Header="Fumbles" Width="80" DisplayMemberBinding="{Binding Path=Fumbles}" />
@@ -789,7 +790,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="Punts" Width="80" DisplayMemberBinding="{Binding Path=Punts}" />
                                         <GridViewColumn Header="Yards" Width="80" DisplayMemberBinding="{Binding Path=Yards}" />
-                                        <GridViewColumn Header="Punt AVG" Width="100" DisplayMemberBinding="{Binding Path=Punt_AVG}" />
+                                        <GridViewColumn Header="Punt AVG" Width="100" DisplayMemberBinding="{Binding Path=Punt_AVG,Converter={StaticResource  DoubleFormatConverter1d}}" />
                                         <GridViewColumn Header="Coffin Corners" Width="100" DisplayMemberBinding="{Binding Path=Coffin_Corners}" />
                                     </GridView>
                                 </ListView.View>
@@ -828,7 +829,7 @@
                                         </GridViewColumn>
                                         <GridViewColumn Header="Returns" Width="80" DisplayMemberBinding="{Binding Path=Returns}" />
                                         <GridViewColumn Header="Yards" Width="80" DisplayMemberBinding="{Binding Path=Yards}" />
-                                        <GridViewColumn Header="Yards/Return" Width="80" DisplayMemberBinding="{Binding Path=Yards_avg}" />
+                                        <GridViewColumn Header="Yards/Return" Width="80" DisplayMemberBinding="{Binding Path=Yards_avg,Converter={StaticResource  DoubleFormatConverter1d}}" />
                                         <GridViewColumn Header="Yards Long" Width="100" DisplayMemberBinding="{Binding Path=Yards_Long}" />
                                         <GridViewColumn Header="TDs" Width="80" DisplayMemberBinding="{Binding Path=TDs}" />
                                         <GridViewColumn Header="Fumbles" Width="80" DisplayMemberBinding="{Binding Path=Fumbles}" />
