Making progress on team stats page

--- a/SpectatorFootball/MainWindow.xaml
+++ b/SpectatorFootball/MainWindow.xaml
@@ -34,7 +34,7 @@
             </MenuItem>
             <MenuItem Name="MenuStats" Header="Stats">
                 <MenuItem Name="MenuPlayerStats" Header="Player Stats" Click= "Show_LeagueStats" />
-                <MenuItem Name="MenuTeamStats" Header="Team Stats" />
+                <MenuItem Name="MenuTeamStats" Header="Team Stats" Click= "Show_LeagueTeamStats" />
                 <MenuItem Name="MenuChampions" Header="Champions" />
             </MenuItem>
             <MenuItem Name="MenuTasks" Header="Tasks">
